# karmapi

./: .gitignore  Anchor.toml  anchor-build.sh  package.json
app/: .gitignore  next.config.ts  package-lock.json  package.json  wrangler.toml
app/app/: layout.tsx  page.tsx
app/app/create/: page.tsx
app/app/portfolio/: page.tsx
app/components/: BetPanel.tsx  CreateMarketForm.tsx  ErrorBoundary.tsx  Header.tsx  MarketCard.tsx  NetworkSelector.tsx  OddsDisplay.tsx
app/components/ui/: calendar.tsx  date-time-picker.tsx  token-selector.tsx
app/hooks/: useConnectionHealth.ts  useCreateMarket.ts  useMarket.ts  useMarkets.ts  usePlaceBet.ts  useRedeem.ts  useSettleMarket.ts  useTokenBalance.ts  useTokenInfo.ts  useUserPositions.ts  useWalletTokens.ts
app/idl/: market_factory.json
app/lib/: cluster.ts  errors.ts  pda.ts  query-helpers.ts
app/providers/: AnchorProvider.tsx  ClusterProvider.tsx  QueryProvider.tsx  WalletProvider.tsx
app/scripts/: setup-local.ts
app/types/: market.ts  market_factory.ts
docs/plans/: 2026-01-27-karmapi-design.md  2026-01-27-karmapi-implementation.md  2026-01-27-sol-vibe-design.md  2026-01-27-sol-vibe-implementation.md
programs/market-factory/: Cargo.toml
programs/market-factory/src/: error.rs  lib.rs
programs/market-factory/src/instructions/: create_market.rs  mod.rs  place_bet.rs  redeem.rs  settle_market.rs
programs/market-factory/src/state/: mod.rs
programs/settlement/: Cargo.toml
programs/settlement/src/: lib.rs  (+1 more)
scripts/: create-test-token.ts
tests/: market-factory.bankrun.ts  market-factory.ts  settlement.ts
(+4 files in other folders)
