[package]
name = "market-factory"
version = "0.1.0"
description = "KarmaPi Market Factory Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "market_factory"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
